# carpi

./: .gitmodules  .gitpod.Dockerfile  .gitpod.yml  CMakeLists.txt  LICENSE  README.md  build.sh  carpi.desktop  config.h  config.json  dependencies.sh  install.sh  main.cpp  mapnik.xml  postgis.sh  qml.qrc  qtquickcontrols2.conf  readme.md  setup.sh  update.sh
.github/ISSUE_TEMPLATE/: bugs.md
docs/: ApplicationWorkflow.md  Build.md  Dependencies.md  Features.md  Leaks.md  Modularity.md  Modules.md  Styling.md  build.md  configure.md  dbSetup.md  dependencies.md  faq.md  imposm_timings.md  install.md  notes.md  postgisSetup.md  todo.md
libs/AsyncSettings/: AsyncSettings.cpp  AsyncSettings.h
libs/BluetoothScanner/: BluetoothScanner.cpp  BluetoothScanner.h
libs/CPUTemperature/: CPUTemperature.cpp  CPUTemperature.h
libs/Command/: Command.cpp  Command.h
libs/Configuration/: Configuration.cpp  Configuration.h
libs/Device/: Device.cpp  Device.h
libs/FMTX/: FMTX.cpp  FMTX.h
libs/GPS/: GPS.cpp  GPS.h
libs/HackRF/: HackRF.cpp  HackRF.h
libs/ISettings/: ISettings.cpp  ISettings.h
libs/IsFile/: IsFile.h
libs/Logger/: Logger.cpp  Logger.h
libs/MBTiles/: MBTiles.cpp  MBTiles.h
libs/Manager/: Manager.cpp  Manager.h
libs/ModuleLoader/: ModuleLoader.cpp  ModuleLoader.h
libs/MusicLibrary/: MusicLibrary.cpp  MusicLibrary.h
libs/MusicPlayer/: MusicPlayer.cpp  MusicPlayer.h
libs/Navigation/: Navigation.cpp  Navigation.h
libs/Network/: Network.cpp  Network.h
libs/PostgreSQLDB/: PostgreSQLDB.cpp  PostgreSQLDB.h
libs/Runnable/: Runnable.cpp  Runnable.h
libs/Settings/: Settings.cpp  Settings.h
libs/Settings/Music/: MusicSettings.cpp  MusicSettings.h
libs/Settings/Navigation/: NavigationSettings.cpp  NavigationSettings.h
libs/Settings/Video/: VideoSettings.cpp  VideoSettings.h
libs/SpectrumPaint/: SpectrumPaint.cpp  SpectrumPaint.h
libs/Subprocess/: Subprocess.cpp  Subprocess.h
libs/Timestamp/: Timestamp.cpp  Timestamp.h
libs/UI/Keyboard/Key/: Key.cpp  Key.h
libs/UI/Keyboard/Layout/: KeyboardLayout.cpp  KeyboardLayout.h
libs/UI/Keyboard/Row/: KeyboardRow.cpp  KeyboardRow.h
libs/UI/MainWindow/: MainWindow.cpp  MainWindow.h  mainwindow.ui
libs/UI/Settings/: Settings.cpp  Settings.h  settings.ui
libs/UI/Sidebar/: Sidebar.cpp  Sidebar.h
libs/UI/Toast/: Toast.cpp  Toast.h
libs/UI/ToastManager/: ToastManager.cpp  ToastManager.h
libs/UI/VTabBar/: VTabBar.cpp  VTabBar.h
libs/UI/VTabWidget/: VTabWidget.cpp  VTabWidget.h
libs/UI/View/: View.cpp  View.h
libs/UI/View/Audio/: ViewAudio.cpp  ViewAudio.h
libs/UI/View/FileManager/: ViewFileManager.cpp  ViewFileManager.h
libs/UI/View/Main/: ViewMain.cpp  ViewMain.h
libs/UI/View/MainMenu/: ViewMainMenu.cpp  ViewMainMenu.h
libs/UI/View/Map/: ViewMap.cpp  ViewMap.h
libs/UI/ViewManager/: ViewManager.cpp  ViewManager.h
libs/UI/Widget/: Widget.cpp  Widget.h
libs/UI/WidgetManager/: WidgetManager.cpp  WidgetManager.h
libs/Ubertooth/: Ubertooth.cpp  Ubertooth.h
libs/Updater/: Updater.cpp  Updater.h
libs/Utils/: Utils.cpp  Utils.h
libs/Utils/CPUTemperature/: CPUTemperature.cpp
libs/Utils/IsFile/: IsFile.cpp
libs/WifiScanner/: WifiScanner.cpp  WifiScanner.h
libs/mbtiles-cpp/MBTileReader/: MBTileReader.cpp  MBTileReader.h
libs/mbtiles-cpp/VectorTile/: VectorTile.cpp  VectorTile.h
libs/mbtiles-cpp/vector_tile21/: vector_tile.pb.cc  vector_tile.pb.h
libs/raygui/: raygui.h
mappings/: imposm.json
modules/: CMakeLists.txt  add.py
modules/Bluetooth/: Bluetooth.cpp  Bluetooth.h  Bluetooth_global.h  CMakeLists.txt  bluetooth.ui
modules/GPS/: GPS.cpp  GPS.h
modules/HackRF/: CMakeLists.txt  HackRF.cpp  HackRF.h  HackRF_global.h  hackrf.ui
modules/ModuleShop/: CMakeLists.txt  ModuleShop.cpp  ModuleShop.h
modules/MusicPlayer/: CMakeLists.txt  MusicPlayer.cpp  MusicPlayer.h  MusicPlayer_global.h  dependencies.sh  musicplayer.ui
modules/MusicPlayer/Player/: Player.cpp  Player.h  player.ui
modules/Navigation/: CMakeLists.txt  Navigation.cpp  Navigation.h  Navigation_global.h  README.md  main.qml  mapnik.xml  navigation.qrc  navigation.ui
modules/Navigation/Map/: Map.cpp  Map.h  map.ui
modules/Navigation/Map/qml/: main.qml
modules/Navigation/Routing/: Routing.cpp  Routing.h  routing.ui
modules/Navigation/docs/: Notes.md
modules/Navigation/qml/: MapButton.qml  main.qml
modules/Navigation/style/: style.json
modules/Navigation/stylesheets/: standard.oss
modules/Settings/: CMakeLists.txt  README.md  Settings.cpp  Settings.h  Settings_global.h  settings.ui
modules/Settings/SettingsTab/: SettingsTab.cpp  SettingsTab.h  settingstab.ui
modules/SystemInfo/: CMakeLists.txt  Navigation.cpp  SystemInfo.cpp  SystemInfo.h  SystemInfo_global.h  systeminfo.ui
modules/WiFi/: CMakeLists.txt  WiFi.cpp  WiFi.h  WiFi_global.h  dependencies.sh  wifi.ui
modules/Wireless/: CMakeLists.txt  Wireless.cpp  Wireless.h  Wireless_global.h  wireless.ui
modules/Wireless/Bluetooth/: Bluetooth.cpp  Bluetooth.h  Bluetooth_global.h  bluetooth.ui
modules/Wireless/WiFi/: CMakeLists.txt  WiFi.cpp  WiFi.h  WiFi_global.h  wifi.ui
qml/: ASettings.qml  Dashboard.qml  RSettings.qml  SettingsSystem.qml  SpeedGauge.qml  UISettings.qml  main.qml
qml/Media/: Media.qml  MediaMusic.qml  MediaVideo.qml  MusicSettings.qml  SettingsMusic.qml  SettingsVideo.qml  VideoChooser.qml  VideoSettings.qml  qmldir
qml/Navigation/: CircleButton.qml  FavouritesPopup.qml  HistoryPopup.qml  InfoMarker.qml  InfoPopup.qml  Navigation.qml  NavigationSearch.qml  NavigationSettings.qml  RectangleButton.qml  SearchPopup.qml  qmldir
qml/Settings/: Settings.qml  SettingsMedia.qml  SettingsNavigation.qml  SettingsUI.qml  qmldir
qml/Singletons/: Navigation.qml
qml/Wireless/: Wireless.qml  WirelessBluetooth.qml  WirelessWiFi.qml  qmldir
scripts/: build.sh  crosscompile.sh  dependencies.sh  disqt.sh  libosmscout.sh  postgis.sh  raylib.sh  rsettingsqt.sh  update.sh
src/: CMM.h  carpi_config.h
src/Module/: Module.cpp  Module.h
src/ext/: modulepp.h  ohlog.h
styles/: shades_of_green.rgs
(+54 files in other folders)
